# pico-plc

./: .gitignore  README.md  devenv.nix  flake.nix  rust-toolchain.toml  treefmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bsp/: Cargo.toml  rust-toolchain.toml
bsp/examples/kitchen-sink/: Cargo.toml
bsp/examples/kitchen-sink-rp2040/: Cargo.toml
bsp/examples/kitchen-sink-rp2040/src/: main.rs
bsp/examples/kitchen-sink-rp235xa/: Cargo.toml
bsp/examples/kitchen-sink/src/: main.rs
bsp/examples/steal/: Cargo.toml
bsp/examples/steal-rp2040/: Cargo.toml
bsp/examples/steal-rp2040/src/: main.rs
bsp/examples/steal/src/: main.rs
bsp/src/: lib.rs  onewire.rs  peripherals.rs
cad/: case.scad  generate-pcb-model.sh
case/: case.scad
demo-firmware/: Cargo.toml
demo-firmware/rp2040/: Cargo.toml
demo-firmware/rp2040/src/: main.rs
demo-firmware/rp235xa/: Cargo.toml
demo-firmware/src/: main.rs
docs/: pins.md
pcb/: .gitignore  README.md  configurable_level_shifter.kicad_sch  fp-lib-table  general_io.kicad_sch  level_shifter.kicad_sch  onewire.kicad_sch  opto_input.kicad_sch  opto_inputs.kicad_sch  pico-plc.kicad_pcb  pico-plc.kicad_pro  pico-plc.kicad_sch  power.kicad_sch  relay_output.kicad_sch  relays.kicad_sch  sym-lib-table
pcb/fab/: .gitignore
pcb/lib/Conn_ScrewTerminals.pretty/: CTB7000-2.kicad_mod  CTB7000-3.kicad_mod  ED5552DS.kicad_mod  ED5553DS.kicad_mod
pcb/lib/RaspberryPi_Pico/Module_RaspberryPi_Pico.pretty/: RaspberryPi_Pico_Common.kicad_mod
