[package]
name = "pico-plc-demo-firmware"
version = "0.1.0"
edition = "2024"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
license = "MIT"

[[bin]]
name = "pico-plc-demo-firmware"
bench = false
test = false

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
ds18b20 = "0.1.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = "0.5.0"
one-wire-bus = "0.1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
