[package]
name = "pico-plc-kitchen-sink-example"
version = "0.1.0"
edition = "2024"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
pico-plc-bsp = { path = "../../", features = ["rp2040"] }
assign-resources = "0.4.1"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }

embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = "0.4.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

ds18b20 = "0.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
