[package]
name = "pico-plc-kitchen-sink-example"
version = "0.1.0"
edition = "2024"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
license = "MIT"

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
ds18b20 = "0.1.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = "0.5.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
pico-plc-bsp = { path = "../../", features = ["rp2040"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
