[package]
name = "pico-plc-steal-example"
version = "0.1.0"
edition = "2024"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.8.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = "0.4.0"
pico-plc-bsp = { path = "../../", features = ["rp2040"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
